--- a/C_ITEM/src/app/shared/component/button/speaker/speaker.component.html
+++ b/C_ITEM/src/app/shared/component/button/speaker/speaker.component.html
@@ -1,4 +1,5 @@
-<ion-button #button style="--background: rgb(24, 153, 214); --background-hover: rgb(28,176,246); --ion-color-primary-shade: rgb(28,176,246); --border-radius: 25%; width: 100px; height: 100px;" (click)="click()">
+<span style="display: inline-flex; align-items: center; position: relative;">
+<ion-button #button class="shadow-bottom" style="--background: rgb(24, 153, 214); --border-radius: 25%; width: 100px; height: 100px;" (click)="click()">
   <div style="display: inline-block;width: 1em;height: 1em;font-size: 3em;color: inherit;">
     <div style="display: block;width: 100%;height: 100%;">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 94 73" width="94"
@@ -54,3 +55,4 @@
   </div>
 
 </ion-button>
+</span>
